Revert "ejercicios 1,2 y 3, pasan los tests menos el ultimo"
This reverts commit a4f8fefe88351e5fdde48ec6bfce7ed59e2ef5c1.